@@ -37,6 +37,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
     if they do (Peter Zelezny)
   * Changed timer callbacks so that they are executed in the context that they
     were created in
+  * Modified Xchat::print and Xchat::command to accept array references in
+    addition to strings for the channel and server parameters
 
 
 ------------------------------------------------------------------------------
